--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
     <footer>
         <section class="card-container">
             <div class="card">
-                <img src="images/XTVCDOGS2.svg" alt="Profile Picture">
+                <img src="images/XTVCBTC.svg" alt="Profile Picture">
                 <h2>Scar Tech</h2>
                 <p>Web Developer & Designer</p>
             </div>
             <div class="card">
-                <img src="images/XTVCHMSTR.svg" alt="Profile Picture">
+                <img src="images/okx.svg" alt="Profile Picture">
                 <h2>Tech Guru</h2>
                 <p>Blockchain Enthusiast & Trader</p>
             </div>
         </section>
         <footer class="footer">
             <p>Powered by OKX API</p>
-            <p>Connect with me on <a href="www.linkedin.com/in/hosea-biwott-31a655286" target="_blank">LinkedIn</a> | <a href="https://github.com" target="_blank">GitHub</a></p>
+            <p>Connect with me on <a href="www.linkedin.com/in/hosea-biwott-31a655286" target="_blank">LinkedIn</a> | <a href="https://github.com/scarzze" target="_blank">GitHub</a></p>
         
         </footer>
     <script src="script.js"></script>
